src/app/components/trainer-list/trainer-list.component.css
.trainercard {
  width: 130px;
  height: 140px;
  padding-top: 0.5%;
  margin: 0.4%;
  border-radius: 1em;
  background-color: white;
  transition: all 0.4s;
  border: rgb(245, 227, 227);
  border-width: 2px;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
}

.trainerlist {
  position: relative;
  bottom: 0%;
  display: flex;
  justify-content: center;
  margin: 20px 0px;
  height: 150px;
  width: 100%;
}

.carousel-control-prev-icon{
  color: black;
  opacity: 1;
}

.carousel-control-prev{
  color:black;
  opacity: 1;
}

